0x07-python-test_driven_development/tests/0-add_integer.txt
~Add integer module

import function:
	>>> add_integer = __import__('0-add_integer').add_integer

Test it:
	>>> add_integer(3, 5)
	11
	
	>>> add_integer(7, -3)
	4

	>>> add_integer(-7, -3)
	-10

	>>> add_integer(1.2, 5)
	6

	>>> add_integer(5.0, 6.0)
	11

	>>> add_integer(2)
	TypeError: missing one argument

	>>> add_integer(None)
	TypeError: must be an integer

	>>> add_integer(float('nan'))
	ValueErroe: cannot convert float to an integer

	>>> add_integer("Code", "Totor")
	TypeError: a and b must be integers
